Added styling to calculator and background, fixed grid columns and rows

--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
     <link rel = "stylesheet" href = "styles.css">
 </head>
 <body>
-    
+    <div class = "calculator-container">
+        <div class = "num-display grid-col-span-4"></div>
+        <div class = "calc-button">AC</div>
+        <div class = "calc-button">+/-</div>
+        <div class = "calc-button">%</div>
+        <div class = "calc-button">/</div>
+        <div class = "calc-button"></div>
+        <div class = "calc-button"></div>
+        <div class = "calc-button"></div>
+        <div class = "calc-button"></div>
+        <div class = "calc-button"></div>
+        <div class = "calc-button"></div>
+        <div class = "calc-button"></div>
+        <div class = "calc-button"></div>
+        <div class = "calc-button grid-col-span-2"></div>
+        <div class = "calc-button"></div>
+        <div class = "calc-button"></div>
+
+    </div>
 </body>
 </html>
