--- a/index.html
+++ b/index.html
@@ -10,22 +10,26 @@
 </head>
 <body>
     <div class = "calculator-container">
-        <div class = "num-display grid-col-span-4"></div>
-        <div class = "calc-button">AC</div>
-        <div class = "calc-button">+/-</div>
-        <div class = "calc-button">%</div>
-        <div class = "calc-button">/</div>
-        <div class = "calc-button"></div>
-        <div class = "calc-button"></div>
-        <div class = "calc-button"></div>
-        <div class = "calc-button"></div>
-        <div class = "calc-button"></div>
-        <div class = "calc-button"></div>
-        <div class = "calc-button"></div>
-        <div class = "calc-button"></div>
-        <div class = "calc-button grid-col-span-2"></div>
-        <div class = "calc-button"></div>
-        <div class = "calc-button"></div>
+        <div class = "num-display grid-col-span-4">120</div>
+        <div class = "calc-button blue-button">AC</div>
+        <div class = "calc-button blue-button">+ / -</div>
+        <div class = "calc-button blue-button">%</div>
+        <div class = "calc-button orange-button">/</div>
+        <div class = "calc-button num-button">7</div>
+        <div class = "calc-button num-button">8</div>
+        <div class = "calc-button num-button">9</div>
+        <div class = "calc-button orange-button">*</div>
+        <div class = "calc-button num-button">4</div>
+        <div class = "calc-button num-button">5</div>
+        <div class = "calc-button num-button">6</div>
+        <div class = "calc-button orange-button">-</div>
+        <div class = "calc-button num-button">1</div>
+        <div class = "calc-button num-button">2</div>
+        <div class = "calc-button num-button">3</div>
+        <div class = "calc-button orange-button">+</div>
+        <div class = "calc-button grid-col-span-2 num-button">0</div>
+        <div class = "calc-button grid-col-span-2 orange-button" >=</div>
+        
 
     </div>
 </body>
