--- a/index.html
+++ b/index.html
@@ -10,27 +10,25 @@
 </head>
 <body>
     <div class = "calculator-container">
-        <div class = "num-display grid-col-span-4">120</div>
-        <div class = "calc-button blue-button">AC</div>
-        <div class = "calc-button blue-button">+ / -</div>
-        <div class = "calc-button blue-button">%</div>
-        <div class = "calc-button orange-button">/</div>
-        <div class = "calc-button num-button">7</div>
-        <div class = "calc-button num-button">8</div>
-        <div class = "calc-button num-button">9</div>
-        <div class = "calc-button orange-button">*</div>
-        <div class = "calc-button num-button">4</div>
-        <div class = "calc-button num-button">5</div>
-        <div class = "calc-button num-button">6</div>
-        <div class = "calc-button orange-button">-</div>
-        <div class = "calc-button num-button">1</div>
-        <div class = "calc-button num-button">2</div>
-        <div class = "calc-button num-button">3</div>
-        <div class = "calc-button orange-button">+</div>
-        <div class = "calc-button grid-col-span-2 num-button">0</div>
-        <div class = "calc-button grid-col-span-2 orange-button" >=</div>
-        
-
+        <button class = "num-display grid-col-span-4">120</button>
+        <button class = "calc-button blue-button">AC</button>
+        <button class = "calc-button blue-button">+ / -</button>
+        <button class = "calc-button blue-button">%</button>
+        <button class = "calc-button orange-button">/</button>
+        <button class = "calc-button num-button">7</button>
+        <button class = "calc-button num-button">8</button>
+        <button class = "calc-button num-button">9</button>
+        <button class = "calc-button orange-button">*</button>
+        <button class = "calc-button num-button">4</button>
+        <button class = "calc-button num-button">5</button>
+        <button class = "calc-button num-button">6</button>
+        <button class = "calc-button orange-button">-</button>
+        <button class = "calc-button num-button">1</button>
+        <button class = "calc-button num-button">2</button>
+        <button class = "calc-button num-button">3</button>
+        <button class = "calc-button orange-button">+</button>
+        <button class = "calc-button grid-col-span-2 num-button">0</button>
+        <button class = "calc-button grid-col-span-2 orange-button" >=</button>
     </div>
 </body>
 </html>
