--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
 <body>
     <div class = "calculator-container">
         <button class = "num-display grid-col-span-4">120</button>
-        <button class = "calc-button blue-button">AC</button>
-        <button class = "calc-button blue-button">+ / -</button>
-        <button class = "calc-button blue-button">%</button>
-        <button class = "calc-button orange-button">/</button>
-        <button class = "calc-button num-button">7</button>
-        <button class = "calc-button num-button">8</button>
-        <button class = "calc-button num-button">9</button>
-        <button class = "calc-button orange-button">*</button>
-        <button class = "calc-button num-button">4</button>
-        <button class = "calc-button num-button">5</button>
-        <button class = "calc-button num-button">6</button>
-        <button class = "calc-button orange-button">-</button>
-        <button class = "calc-button num-button">1</button>
-        <button class = "calc-button num-button">2</button>
-        <button class = "calc-button num-button">3</button>
-        <button class = "calc-button orange-button">+</button>
-        <button class = "calc-button grid-col-span-2 num-button">0</button>
-        <button class = "calc-button grid-col-span-2 orange-button" >=</button>
+        <button class = "calc-button blue-button" id = "clear">AC</button>
+        <button class = "calc-button blue-button" id = "negative-positive">+ / -</button>
+        <button class = "calc-button blue-button" id = "percent">%</button>
+        <button class = "calc-button orange-button" id = "">/</button>
+        <button class = "calc-button num-button" id = "7">7</button>
+        <button class = "calc-button num-button" id = "8">8</button>
+        <button class = "calc-button num-button" id = "9">9</button>
+        <button class = "calc-button orange-button" id = "">*</button>
+        <button class = "calc-button num-button" id = "4">4</button>
+        <button class = "calc-button num-button" id = "5">5</button>
+        <button class = "calc-button num-button" id = "6">6</button>
+        <button class = "calc-button orange-button" id = "subtract">-</button>
+        <button class = "calc-button num-button" id = "1">1</button>
+        <button class = "calc-button num-button" id = "2">2</button>
+        <button class = "calc-button num-button" id = "3">3</button>
+        <button class = "calc-button orange-button" id = "+">+</button>
+        <button class = "calc-button grid-col-span-2 num-button" id = "0">0</button>
+        <button class = "calc-button grid-col-span-2 orange-button" id = "equals">=</button>
     </div>
 </body>
 </html>
