Added functionality to all operand buttons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class = "calculator-container">
-        <button class = "num-display grid-col-span-4"></button>
+        <div class = "num-display grid-col-span-4"></div>
         <button class = "calc-button blue-button" id = "clear">AC</button>
         <button class = "calc-button blue-button" id = "negative-positive">+ / -</button>
         <button class = "calc-button blue-button" id = "percent">%</button>
