--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel = "stylesheet" href = "styles.css">
 </head>
 <body>
+    <h1> Calculator</h1>
     <div class = "calculator-container">
         <div class = "num-display grid-col-span-4"></div>
         <button class = "calc-button blue-button" id = "clear">AC</button>
@@ -28,7 +29,9 @@
         <button class = "calc-button num-button" id = "3">3</button>
         <button class = "calc-button orange-button" id = "+">+</button>
         <button class = "calc-button grid-col-span-2 num-button" id = "0">0</button>
-        <button class = "calc-button grid-col-span-2 orange-button" id = "=">=</button>
+        <button class = "calc-button num-button" id = ".">.</button>
+        <button class = "calc-button orange-button attention" id = "=">=</button>
     </div>
+    <footer id = "footer-font">by Alexander Wiltshire</footer>
 </body>
 </html>
