--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <h1> Calculator</h1>
     <div class = "calculator-container">
         <div class = "num-display grid-col-span-4"></div>
-        <button class = "calc-button blue-button" id = "clear">AC</button>
+        <button class = "calc-button red-button" id = "clear">AC</button>
+        <button class = "calc-button red-button" id = "delete">DEL</button>
         <button class = "calc-button blue-button" id = "negative-positive">+ / -</button>
-        <button class = "calc-button blue-button" id = "percent">%</button>
         <button class = "calc-button orange-button" id = "/">/</button>
         <button class = "calc-button num-button" id = "7">7</button>
         <button class = "calc-button num-button" id = "8">8</button>
