--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class = "calculator-container">
         <div class = "num-display grid-col-span-4"></div>
         <button class = "calc-button red-button" id = "clear">AC</button>
-        <button class = "calc-button red-button" id = "delete">DEL</button>
+        <button class = "calc-button red-button" id = "delete" onclick="delNum()">DEL</button>
         <button class = "calc-button blue-button" id = "negative-positive">+ / -</button>
         <button class = "calc-button orange-button" id = "/">/</button>
         <button class = "calc-button num-button" id = "7">7</button>
