Fixed concenating extra numbers to result, stopped decimals overflowing screen, changed const buttons querySelector to css selector, made all variables null on AC

--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
         <div class = "num-display grid-col-span-4"></div>
         <button class = "calc-button red-button" id = "clear">AC</button>
         <button class = "calc-button red-button" id = "delete" onclick="delNum()">DEL</button>
-        <button class = "calc-button blue-button" id = "negative-positive">+ / -</button>
+        <button class = "calc-button blue-button operator-button" id = "negative-positive">+ / -</button>
         <button class = "calc-button orange-button" id = "/">/</button>
         <button class = "calc-button num-button" id = "7">7</button>
         <button class = "calc-button num-button" id = "8">8</button>
         <button class = "calc-button num-button" id = "9">9</button>
-        <button class = "calc-button orange-button" id = "*">*</button>
+        <button class = "calc-button orange-button operator-button" id = "*">*</button>
         <button class = "calc-button num-button" id = "4">4</button>
         <button class = "calc-button num-button" id = "5">5</button>
         <button class = "calc-button num-button" id = "6">6</button>
-        <button class = "calc-button orange-button" id = "-">-</button>
+        <button class = "calc-button orange-button operator-button" id = "-">-</button>
         <button class = "calc-button num-button" id = "1"> 1</button>
         <button class = "calc-button num-button" id = "2">2</button>
         <button class = "calc-button num-button" id = "3">3</button>
-        <button class = "calc-button orange-button" id = "+">+</button>
+        <button class = "calc-button orange-button operator-button" id = "+">+</button>
         <button class = "calc-button grid-col-span-2 num-button" id = "0">0</button>
         <button class = "calc-button num-button" id = ".">.</button>
         <button class = "calc-button orange-button attention" id = "=">=</button>
