--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button class = "calc-button red-button" id = "clear">AC</button>
         <button class = "calc-button red-button" id = "delete" onclick="delNum()">DEL</button>
         <button class = "calc-button blue-button operator-button" id = "negative-positive">+ / -</button>
-        <button class = "calc-button orange-button" id = "/">/</button>
+        <button class = "calc-button orange-button operator-button" id = "/">/</button>
         <button class = "calc-button num-button" id = "7">7</button>
         <button class = "calc-button num-button" id = "8">8</button>
         <button class = "calc-button num-button" id = "9">9</button>
